<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".shoes">


    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:id="@+id/main_containt"
    android:background="@color/white">


        <ScrollView android:layout_width="match_parent" android:layout_height="match_parent"
                    android:layout_above="@+id/bottom_view_size"
        >
            <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                                       android:layout_height="match_parent"
                                                       android:id="@+id/recycle_v">

            </androidx.recyclerview.widget.RecyclerView>
        </ScrollView>


        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/bottom_view_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bottom_view">
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_weight="1"
                          android:orientation="vertical"
                          android:layout_height="wrap_content">
                <Button
                        style="@style/AppTheme.Button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/female"
                        android:text="@string/female"/>
                <Button
                        style="@style/AppTheme.Button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/male"
                        android:text="@string/male"/>

            </LinearLayout>

            <LinearLayout

                    android:layout_gravity="center"
                    android:layout_width="fill_parent"
                          android:layout_weight="1"
                          android:orientation="horizontal"
                          android:layout_height="wrap_content">
                <Button
                        android:visibility="visible"
                        style="@style/AppTheme.Button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:id="@+id/size"
                        android:text="@string/size"/>
                <Spinner

                        android:layout_gravity="center"
                        android:id="@+id/spinner"
                        android:layout_width="fill_parent"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:prompt="@id/size"/>


            </LinearLayout>


        </LinearLayout>
        <LinearLayout
                android:id="@+id/bottom_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
            <Button
                    style="@style/AppTheme.Button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/galery"
                    android:text="@string/menu_gallery"/>
            <Button
                    style="@style/AppTheme.Button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/line_up"
                    android:text="@string/line_up"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>